@@ -56,7 +56,15 @@
 #include "magick.h"
 #include "define.h"
 #if defined(HasLCMS)
-#include "lcms.h"
+# if defined(HAVE_LCMS_H)
+#  include "lcms.h"
+# else
+#  if defined(HAVE_LCMS_LCMS_H)
+#   include <lcms/lcms.h>
+#  else
+#   include "lcms.h"
+#   endif
+# endif
 #endif
 
 /*
