@@ -1,5 +1,8 @@
+2002-01-04 Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+        * Fix lcms header inclusion in transform.c.
+
 2002-01-03  Glenn Randers-Pehrson  <randeg@alum.rpi.edu>
-  * Fixed an out-of-bounds memset() when decoding 1-bit AVI, BMP,
+        * Fixed an out-of-bounds memset() when decoding 1-bit AVI, BMP,
 	  and DIB images.
 
 2002-01-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
